deploy.yaml
# if u want to pull image from remote hub change image policy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-dev-deployment
  namespace: dev
  labels:
     app: course-dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
       app: course-dev-app
  template:
    metadata:
      labels:
         app: course-dev-app
    spec:
      containers:
      - name: course-dev
        image: registry.gitlab.com/sof-learning/course-dev:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        imagePullPolicy: Always
        ports:
        - containerPort: 3100

        #Defining Env Vars
      imagePullSecrets:
        - name: regcred

---
# if u working on minikube => minikube addons enable ingress 
apiVersion: v1
kind: Service
metadata:
  name: course-dev-svc
  namespace: dev
  labels:
    app: course-dev-app
spec:
  type: LoadBalancer
  selector:
     app: course-dev-app
  ports:
  - name: http
    port: 3100
    protocol: TCP
    targetPort: 3100
                    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: course-dev-ingress
  namespace: dev
spec:
  tls:
    - hosts:
        - course-dev.canbe.fun
      secretName: course-dev-tls
  rules:
    - host: course-dev.canbe.fun
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: course-dev-svc
                port:
                  number: 3100
